# CineReader

./: CMakeLists.txt  INSTALL.md  README.md  bitmapinfoheader.cpp  bitmapinfoheader.h  bitreader.cpp  bitreader.h  cinefileheader.cpp  cinefileheader.h  cineimage.cpp  cineimage.h  cinereader.cpp  cinereader.h  data.h  imageoffsets.h  makefile  setup.cpp  setup.h  test.cpp
matlab/: CineReader.m  CineReaderHandle.h  CineReaderInterface.cpp  CineReaderInterface.mexa64  CineReaderInterface.mexmaci64  CineReaderInterface.mexw64  CineReaderRaw.m  compile.m  test.m  testWin.m
src/: CMakeLists.txt  bitmapinfoheader.h  bitreader.cpp  bitreader.h  cinefileheader.h  cineimage.cpp  cineimage.h  cinereader.cpp  cinereader.h  data.h  imageoffsets.cpp  setup.cpp  setup.h  testWin.cpp
src/matlab/: CineReaderInterface.cpp
